moved into folders and created basic homepage html boilerplate

--- a/loginPage/loginPage.html
+++ b/loginPage/loginPage.html
@@ -19,5 +19,7 @@
             <button class = "loginButton"> Login </button>
             <button class = "signUpButton"> Sign Up</button>
         </div>
+
+        <script src = "loginPage.js" defer> </script>
 </body>
 </html>
