created basic login, make a way so that its fits better on the screen

--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -7,6 +7,20 @@
     <link rel = "stylesheet" href = "homePage.css">
 </head>
 <body>
+    <header class = "homePageHeader">
+    <h1> CC Transfer</h1>
+        <nav class = "homePageNavBar"> 
+            <ul class = "homePageNavBar">
+                <li> <a href ="#home">Home</a></li>
+                <li> <a href ="#findSchools">Find Schools</a></li>
+                <li> <a href ="#transferProgress">Transfer Progress</a></li>
+                <li> <a href ="#community">Community</a></li>
+                <li> <a href = "#transferResources">Transfer Resources</a></li>
+                <li> <a href = "#about">About</a></li>
+                <li> <a href = "#login">Login</a></li>
+            </ul>
+        </nav>
+    </header>
    
     <script src = "homePage.js" defer></script>
 </body>
