changes in links and made look nicer

--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -7,10 +7,11 @@
     <link rel = "stylesheet" href = "homePage.css">
 </head>
 <body>
-    <header class = "homePageHeader">
+    <header class = "homeHeader">
     <h1> CC Transfer</h1>
-        <nav class = "homePageNavBar"> 
-            <ul class = "homePageNavBar">
+    </header>
+        <nav class = "navBar"> 
+            <ul class = "navLinks">
                 <li> <a href ="#home">Home</a></li>
                 <li> <a href ="#findSchools">Find Schools</a></li>
                 <li> <a href ="#transferProgress">Transfer Progress</a></li>
@@ -20,7 +21,7 @@
                 <li> <a href = "#login">Login</a></li>
             </ul>
         </nav>
-    </header>
+    
    
     <script src = "homePage.js" defer></script>
 </body>
