added many folders and created header for homepage

--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -12,7 +12,7 @@
     </header>
         <nav class = "navBar"> 
             <ul class = "navLinks">
-                <li> <a href ="#home">Home</a></li>
+                <li> <a href ="./homePage.html">Home</a></li>
                 <li> <a href ="#findSchools">Find Schools</a></li>
                 <li> <a href ="#transferProgress">Transfer Progress</a></li>
                 <li> <a href ="#community">Community</a></li>
@@ -21,7 +21,18 @@
                 <li> <a href = "#login">Login</a></li>
             </ul>
         </nav>
-    
+    <main>
+        <div class="hero">
+            <h2>Plan Your Transfer Journey with Ease</h2>
+            <h4>Find transfer requirements and track your GPA</h4>
+            <button>Get Started</button> <button> Track Progress</button>
+        </div>
+        <div class ="keyFeatures">
+            <a href = "../transferProgress/transferProgress.html">
+                <img src ="#icon">
+                <h2>Transfer Progress</h2>
+        </div>
+    </main>
    
     <script src = "homePage.js" defer></script>
 </body>
