created some of the main page

--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -25,12 +25,15 @@
         <div class="hero">
             <h2>Plan Your Transfer Journey with Ease</h2>
             <h4>Find transfer requirements and track your GPA</h4>
-            <button>Get Started</button> <button> Track Progress</button>
+            <a href = "../loginPage/loginPage.html">
+            <button>Get Started</button></a> 
+            <a href = "../transferProgress/transferProgress.html">
+            <button> Track Progress</button></a>    
         </div>
         <div class ="keyFeatures">
-            <a href = "../transferProgress/transferProgress.html">
-                <img src ="#icon">
-                <h2>Transfer Progress</h2>
+            <a href = "../schoolsPage/schools.html">
+                <h2>Find schools transfer requirements</h2>
+            </a>
         </div>
     </main>
    
