added a how it works page

--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -22,17 +22,42 @@
             </ul>
         </nav>
     <main>
+
         <div class="hero">
-            <h2>Plan Your Transfer Journey with Ease</h2>
+            <h1>Plan Your Transfer Journey with Ease</h1>
             <h4>Find transfer requirements and track your GPA</h4>
             <a href = "../loginPage/loginPage.html">
             <button>Get Started</button></a> 
             <a href = "../transferProgress/transferProgress.html">
             <button> Track Progress</button></a>    
         </div>
+        
+        <section id = "how-it-works">
+            <h2>How It Works</h2>
+            <ol>
+                <li>
+                    <h3>Step 1: Sign Up</h3>
+                    <p>Create an account to get started</p>
+                </li>
+                <li>
+                    <h3>Step 2: Enter Your Classes</h3>
+                    <p>Input your classes you've completed and plan on completing to track your progress</p>
+                </li>
+                <li>
+                    <h3>Step 3: Track Your Progress</h3>
+                    <p>Monitor your GPA and track how close you are to meeting transfer requirements</p>
+                </li>
+            </ol>
+        </section>
         <div class ="keyFeatures">
             <a href = "../schoolsPage/schools.html">
                 <h2>Find schools transfer requirements</h2>
+            </a>
+            <a href = "../transferResources/transferResources.html">
+                <h2>Resources</h2>
+            </a>
+            <a href="../community/community.html" >
+                <h2>Community</h2>
             </a>
         </div>
     </main>
