finished basic layout for home page, need to add css and js

--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -60,6 +60,22 @@
                 <h2>Community</h2>
             </a>
         </div>
+        <section id="testimonials">
+            <h2>What Our Users Say</h2>
+            <blockquote>
+                <p>"CC Transfer helped guide me in the right track to get into my dream school!</p>
+                <p>- Jared Sarabia, UCI Transfer Student</p>
+            </blockquote>
+        </section>
+        <footer>
+            <ul>
+                <li><a href = "../about/aboutUs.html">About Us</a></li>
+                <li><a href = "../about/contact.html">Contact</a></li>
+                <li><a href = "../about/faq.html">FAQ</a></li>
+                <li><a href = "../about/tos.html">Terms and Services</a></li>
+                <li><a href = "../about/privacyPolicy.html">Privacy Policy</a></li>
+            </ul>
+        </footer>
     </main>
    
     <script src = "homePage.js" defer></script>
