added icons for footer

--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -68,12 +68,17 @@
             </blockquote>
         </section>
         <footer>
+            <ul class = "social">
+                <li><a href = "https://www.instagram.com/chaffeycompsciclub/" target="_blank"><img src="../images/instagram.png" alt="Instagram"></a></li>
+                <li><a href = "https://www.youtube.com/@georgetsaiii" target="_blank"><img src = "../images/youtube.png" alt ="Youtube"> </a></li>
+                <li><a href = "https://www.linkedin.com/in/george-tsai-a59818287/" target="_blank"><img src = "../images/business.png" alt = "LinkedIn"></a></li>
+            </ul>
             <ul>
                 <li><a href = "../about/aboutUs.html">About Us</a></li>
                 <li><a href = "../about/contact.html">Contact</a></li>
                 <li><a href = "../about/faq.html">FAQ</a></li>
-                <li><a href = "../about/tos.html">Terms and Services</a></li>
-                <li><a href = "../about/privacyPolicy.html">Privacy Policy</a></li>
+                <li><a href = "../about/tos.html">Terms</a></li>
+                <li><a href = "../about/privacyPolicy.html">Privacy</a></li>
             </ul>
         </footer>
     </main>
