--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -73,7 +73,7 @@
                 <li><a href = "https://www.youtube.com/@georgetsaiii" target="_blank"><img src = "../images/youtube.png" alt ="Youtube"> </a></li>
                 <li><a href = "https://www.linkedin.com/in/george-tsai-a59818287/" target="_blank"><img src = "../images/business.png" alt = "LinkedIn"></a></li>
             </ul>
-            <ul>
+            <ul class = "aboutSection">
                 <li><a href = "../about/aboutUs.html">About Us</a></li>
                 <li><a href = "../about/contact.html">Contact</a></li>
                 <li><a href = "../about/faq.html">FAQ</a></li>
