need to get json to display info dynamically

--- a/schoolsPage/schools.html
+++ b/schoolsPage/schools.html
@@ -8,7 +8,20 @@
     
 </head>
 <body>
+    <h1>Select a School and Major</h1>
+
+    <label for ="schoolSelect">Choose a school:</label>
+    <select id = "schoolSelect">
+        <option value = "uci">University of California, Irvine</option>
+        <option value = "csulb">California State University, Long Beach</option>
+        <option value = "cpp"> California Polytechnic University, Pomona</option>
+    </select>
+    <label for ="majorSelect">Choose a major:</label>
+    <select id = "majorSelect">
+        <option value = "compSci">Computer Science</option>
+    </select>
     
+    <div id = "requirements"></div>
     <script src = "schools.js" defer> </script>
 </body>
 </html>
