--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -13,7 +13,7 @@
         <nav class = "navBar"> 
             <ul class = "navLinks">
                 <li> <a href ="./homePage.html">Home</a></li>
-                <li> <a href ="#findSchools">Find Schools</a></li>
+                <li> <a href ="../schoolsPage/schools.html">Find Schools</a></li>
                 <li> <a href ="#transferProgress">Transfer Progress</a></li>
                 <li> <a href ="#community">Community</a></li>
                 <li> <a href = "#transferResources">Transfer Resources</a></li>
