made dropdown menu work with json and dynamic

--- a/schoolsPage/schools.html
+++ b/schoolsPage/schools.html
@@ -19,6 +19,7 @@
     <label for ="majorSelect">Choose a major:</label>
     <select id = "majorSelect">
         <option value = "compSci">Computer Science</option>
+        <option value = "EE">Electrical Engineering</option>
     </select>
     
     <div id = "requirements"></div>
